[project]
name = "cite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arumoy Shome", email = "contact@arumoy.me" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.1",
]

[project.scripts]
cite = "cite:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
